--- a/build.gradle
+++ b/build.gradle
@@ -7,26 +7,20 @@
  * user guide available at http://gradle.org/docs/1.11/userguide/tutorial_java_projects.html
  */
 
-/*
-// Apply the java plugin to add support for Java
-apply plugin: 'java'
+// def proc = 'for t in `git tag -l`; do git cat-file tag $t; done'
+// proc.execute()
 
-// In this section you declare where to find the dependencies of your project
-repositories {
-    // Use 'maven central' for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
-    mavenCentral()
+task readTags(type:Exec) {
+ 
+ commandLine 'git', 'tag', '-l'   
+ 
+
+  //extension method stopTomcat.output() can be used to obtain the output:
+  ext.output = {
+    return standardOutput.toString()
+  }
 }
 
-// In this section you declare the dependencies for your production and test code
-dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.5'
-
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
-    testCompile "junit:junit:4.11"
+task tagger(dependsOn:readTags) {
+    println readTags.output
 }
-*/
