Changed task name tagger to releaseNotes

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ def readTagMessage(String tag) {
 
 
 
-task tagger() << {
+task releaseNotes() << {
     def releaseNotes = new File('releaseNotes.md')
     releaseNotes.delete()
     def tags = readTags()
